MIPS: DTS: CI20: fix usb_power must be always-on
Signed-off-by: H. Nikolaus Schaller <hns@goldelico.com>

--- a/arch/mips/boot/dts/ingenic/ci20.dts
+++ b/arch/mips/boot/dts/ingenic/ci20.dts
@@ -108,7 +108,7 @@
 		 * regulator framework doesn't enable the regulator
 		 * if boot-on is not there.
 		 */
-//		regulator-always-on;
+		regulator-always-on;
 		regulator-boot-on;
 	};
 
@@ -130,6 +130,9 @@
 
 		gpio = <&gpf 14 GPIO_ACTIVE_LOW>;
 		enable-active-high;
+
+//		regulator-always-on;
+		regulator-boot-on;
 	};
 
 	hdmi_power: fixedregulator@3 {
@@ -149,7 +152,7 @@
 };
 
 &otg_phy {
-	vcc-supply = <&usb_power>;
+	vcc-supply = <&otg_power>;
 };
 
 &ext {
