--- a/arch/mips/boot/dts/ingenic/Makefile
+++ b/arch/mips/boot/dts/ingenic/Makefile
@@ -5,6 +5,7 @@ dtb-$(CONFIG_JZ4770_GCW0)	+= gcw0.dtb
 dtb-$(CONFIG_JZ4780_CI20)	+= ci20.dtb
 
 dtb-$(CONFIG_INGENIC_GENERIC_BOARD)	+= mipsbook_400.dtb \
+CONFIG_INGENIC_GENERIC_BOARD)
 					   qi_lb60.dtb \
 					   gcw0.dtb \
 					   ci20.dtb
