--- a/arch/arm/configs/letux_defconfig
+++ b/arch/arm/configs/letux_defconfig
@@ -8488,3 +8488,9 @@ CONFIG_ARCH_USE_MEMTEST=y
 # end of Kernel hacking
 
 CONFIG_IO_URING_ZCRX=y
+CONFIG_BT_HCIUART_QCA=y
+CONFIG_ATH_COMMON=m
+CONFIG_WLAN_VENDOR_ATH=y
+CONFIG_ATH10K=m
+CONFIG_ATH10K_CE=y
+CONFIG_ATH10K_SDIO=m
