--- a/arch/arm/configs/letux_defconfig
+++ b/arch/arm/configs/letux_defconfig
@@ -1453,7 +1453,7 @@ CONFIG_CAN_BCM=m
 CONFIG_BT=m
 CONFIG_BT_BREDR=y
 CONFIG_BT_RFCOMM=m
-# CONFIG_BT_RFCOMM_TTY is not set
+CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=m
 # CONFIG_BT_BNEP_MC_FILTER is not set
 # CONFIG_BT_BNEP_PROTO_FILTER is not set
