blacklist aess/aes modules
Signed-off-by: H. Nikolaus Schaller <hns@goldelico.com>

--- a/Letux/etc/modprobe.d/aess.conf
+++ b/Letux/etc/modprobe.d/aess.conf
@@ -1,2 +1,5 @@
-# we want to manually load it and wait for completion
-blacklist omapdrm
+# we want to manually load the AESS drivers through 'modprobe snd_soc_omap_abe_twl6040'
+
+blacklist snd_soc_omap_aess
+blacklist snd_soc_omap_abe_twl6040
+blacklist snd_soc_omap_mcpdm
