MIPS: DTS: LX16: add spi lcd and epd
Signed-off-by: H. Nikolaus Schaller <hns@goldelico.com>

--- a/arch/mips/boot/dts/ingenic/lx16.dts
+++ b/arch/mips/boot/dts/ingenic/lx16.dts
@@ -6,6 +6,7 @@
 #define LX16_W		2	// 0 = none; WLAN and Bluetooth: 1 = QCom, 2 = ESP32
 #define PWM_LED		0	// 1 = use PWM on led0 and led1
 #define SPI_BITBANG	0	// 1 = debug using bitbang gpio
+#define APPLICATION	1	// 0 = none, 1 = LCD, 2 = EPD, 3 = tbd.
 
 /* choose one board revision */
 #if LX16_REV == 1
@@ -21,4 +22,10 @@
 #include "lx16-wireless-qcom.dtsi"
 #elif LX16_W == 2
 #include "lx16-wireless-esp32.dtsi"
+#endif
+
+#if APPLICATION == 1
+#include "lx16+spi-display.dtsi"
+#elif APPLICATION == 2
+#include "lx16+epd-display.dtsi"
 #endif
